# anime-schedule-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
examples/: README.md  info.rs  schedule.rs  search.rs  top.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/commands/: countdown.rs  info.rs  mod.rs  schedule.rs  search.rs  top.rs
src/display/: mod.rs
src/utils/: mod.rs
