[package]
name = "animesh"
version = "0.1.0"
edition = "2021"
authors = ["Abhishek Gautam"]
description = "A powerful CLI tool for anime fans to track their favorite shows and discover new anime"
license = "MIT"
repository = "https://github.com/Abhi-Gautam/animesh.git"
keywords = ["anime", "cli", "schedule", "anilist", "manga"]
categories = ["command-line-utilities", "games", "multimedia"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.4", features = ["derive"] }
prettytable-rs = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
colored = "2.0"
crossterm = "0.27"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[[example]]
name = "schedule"
path = "examples/schedule.rs"